--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                     <a href="https://www.instagram.com/_saanuuuu___/" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 20px; height: 20px;">
                     </a>
-                    <a href="https://x.com/SomeshR82674271" target="_blank"></a>
+                    <a href="https://x.com/SomeshR82674271" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/X_logo.jpg" alt="X" style="width: 20px; height: 20px;">
+                    </a>
                     <a href="https://www.quora.com/profile/The-Unexpected-Facts" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Quora_icon.svg/128px-Quora_icon.svg.png" alt="Quora" style="width: 20px; height: 20px;">
                     </a>
