--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somesh Portfolio</title>
-    <link rel="icon" type="image/png" href="IMG-20240308-WA0006.jpg">
+    <link rel="icon" type="image/png" href="Sanu.jpg">
     <link rel="stylesheet" href="style.css">
     <!---font awesome cdn font icon css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
