--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </header>
             <div class="container">
                 <div class="hero-pic">
-                    <img class="he-pic" src="Snapchat-864650903.jpg" alt="profile pic">
+                    <img class="he-pic" src="photo_2024-08-26_18-50-54.jpg" alt="profile pic">
                 </div>
                 <div class="hero-text">
                     <h5>Hi I'm <span class="">Full Stack Web-Developer</span></h5>
