--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Resume</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="https://medium.com/@someshranjanbiswal13678/the-role-of-database-management-systems-in-modern-applications-efficiently-725f0e87cdcf">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                     
                 </ul>
