--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <ul class="navlinks">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="My Resume (1).pdf">Resume</a></li>
                     <li><a href="https://medium.com/@someshranjanbiswal13678/the-role-of-database-management-systems-in-modern-applications-efficiently-725f0e87cdcf">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="mailto:someshranjanbiswal13678@gmail.com">Contact</a></li>
                     
                 </ul>
             </nav>
@@ -44,7 +44,7 @@
                     <h1>Sanu</h1>
                     <p>Welcome to the creative world of Somesh Ranjan Biswal! With a passion for gaming and innovating different items, I specialize in creating engaging and educational content for young minds. My work is to help people in different activities like promoting and giving the actual knowledge, I am a E-sports player in  state level and played many tournamnets for my city and my state in national levels!</p>
                 <div class="btn-group">
-                    <a href="#" class="btn active">Download CV</a>
+                    <a href="My Resume (1).pdf" class="btn active">Download CV</a>
                     <a href="mailto:someshranjanbiswal@outlook.com" class="btn">Contact</a>
                 </div> 
                 <div class="social accounts">
