--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p>Thank you for visiting my portfolio. Feel free to connect with me on social media or reach out directly.</p>
                 <ul class="socials">
                     <li><a href="https://www.linkedin.com/in/your-linkedin" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Linkedin_icon.svg" alt="linkedin" style="width: 25px; height: 25px;"></a></li>
-                    <li><a href="https://github.com/ei-sanu/ei-sanu" target="_blank"><img src="https://img.icons8.com/?size=100&id=bVGqATNwfhYq&format=png&color=000000" alt="github" style="width: 25px; height: 25px;"></a></li>
+                    <li><a href="https://github.com/ei-sanu/ei-sanu" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg" alt="github" style="width: 25px; height: 25px;"></a></li>
                         <div class="footer-bottom">
                             <p>&copy; 2024 Somesh Ranjan Biswal. All Rights Reserved.</p>
                         </div>
