--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="navlinks">
                     <li><a href="http://127.0.0.1:5500/test.html#">Home</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="resume.png">Resume</a></li>
                     <li><a href="#">Blog</a></li>
                     <!-- <li><a href="#">Contact</a></li> -->
                 </ul>
@@ -37,7 +37,7 @@
                 <h1>Sanu</h1>
                 <p>Welcome to the creative world of Somesh Ranjan Biswal! With a passion for gaming and innovating different items, I specialize in creating engaging and educational content for young minds. My work is to help people in different activities like promoting and giving the actual knowledge, I am an E-sports player at the state level and have played many tournaments for my city and state at national levels!</p>
                 <div class="btn-group">
-                    <a href="#" class="btn active">Download CV</a>
+                    <a href="resume.png" class="btn active">Download CV</a>
                     <a href="mailto:someshranjanbiswal@outlook.com" class="btn">Contact</a>
                 </div>
                 <div class="social-accounts">
